17715
Using auxiliary constructors in a class with explicitly typed self references doesn't compile. Seems like it expects a constructor without any parameters.
{code}
trait Foo
class Bar(val i: Int) {
  self: Foo =>
  def this() = this(0)
}
{code}
{code}
wat.scala:4: error: too many arguments for constructor Predef: ()object Predef
  def this() = this(0)
               ^
one error found
{code}
